workspaces/diff-engine/src/learn_shape/snapshots/optic_diff_engine__learn_shape__result__test__trail_observations_does_not_generate_commands_for_orphaned_shapes__array_item_results.snap
---
source: workspaces/diff-engine/src/learn_shape/result.rs
expression: "&array_item_results"
---
(
    Some(
        "test-id-8",
    ),
    [
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-8",
                    base_shape_id: "$string",
                    name: "",
                },
            ),
        ),
    ],
)
